Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6535

Ordering of mysql_upgrade tasks is not optimal

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.12
    • 10.0.13
    • None
    • None

    Description

      When upgrading MariaDB 5.5.31 to MariaDB 10.0.12, because of the order that mysql_upgrade performs the upgrade of the 'mysql' tables, one can see many errors like the following:

      2014-08-05 13:22:49 7ec848562700 InnoDB: Error: Fetch of persistent statistics requested for table "dbname"."table1" but the required system tables mysql.innodb_table_stats and mysql.innodb_index_stats are not present or have unexpected structure. Using transient stats instead.
      2014-08-05 13:22:49 7ec848562700 InnoDB: Error: Table "mysql"."innodb_table_stats" not found.
      ...

      It does this for each and every table being checked.

      MySQL/Oracle supposedly fixed this in their mysqlcheck/mysql_upgrade:

      http://bugs.mysql.com/bug.php?id=68163

      However, I am unable to run mysql_upgrade with the --skip-database option without receiving an error. I've added the "loose" prefix as well, but it doesn't seem to change anything.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            ccalender Chris Calender (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.