MDEV-6535 Ordering of mysql_upgrade tasks is not optimal

first update system tables, then the rest